# first-crew-ai-agent

./: README.md
extract_report_agent/: README.md  blog.md  news.md  pyproject.toml  report.md
extract_report_agent/src/extract_report_agent/: crew.py  main.py
extract_report_agent/src/extract_report_agent/config/: agents.yaml  tasks.yaml
latest_ai_development/: report.md
latest_ai_development/src/latest_ai_development/: crew.py  main.py
