[project]
name = "extract_report_agent"
version = "0.1.0"
description = "extract-report-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "PyPDF2",
    "gradio"
]

[project.scripts]
extract_report_agent = "extract_report_agent.main:run"
run_crew = "extract_report_agent.main:run"
train = "extract_report_agent.main:train"
replay = "extract_report_agent.main:replay"
test = "extract_report_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
